--- a/src/css/index.css
+++ b/src/css/index.css
@@ -259,7 +259,7 @@ body {
 }
 #ssr_help ul > li > a:hover {
   text-decoration: none;
-  background: #43a047;
+  background: #2b79bb;
 }
 #ssr_help ul > li > a:focus {
   text-decoration: none;
