--- a/src/css/ssrpublic.css
+++ b/src/css/ssrpublic.css
@@ -165,7 +165,7 @@
 }
 #ssr_help ul > li > a:hover {
   text-decoration: none;
-  background: #43a047;
+  background: #2b79bb;
 }
 #ssr_help ul > li > a:focus {
   text-decoration: none;
