--- a/src/css/user.css
+++ b/src/css/user.css
@@ -109,6 +109,9 @@ body {
 #product .nav_left dl dd:hover > a {
   text-indent: 10px;
 }
+#product .nav_left dl dd:last-of-type a {
+  border: none;
+}
 #product .conatiner_right {
   width: 820px;
   float: right;
@@ -125,8 +128,24 @@ body {
   display: block;
   margin: 12px auto 0;
 }
-#product .conatiner_right .msg_product {
-  margin-bottom: 30px;
+#product .conatiner_right .msg_product .text_main span {
+  font-size: 18px;
+  color: #28364a;
+  line-height: 40px;
+  margin-top: 10px;
+  display: block;
+  padding: 10px 0 0 10px;
+}
+#product .conatiner_right .msg_product .text_main p {
+  font-size: 14px;
+  color: #666;
+  line-height: 32px;
+  padding: 0 10px;
+}
+#product .conatiner_right .msg_product .first_img {
+  width: 100%;
+  display: block;
+  margin-bottom: 10px;
 }
 #product .conatiner_right .msg_product > h1 {
   margin: 10px auto 0;
@@ -143,7 +162,7 @@ body {
   transition: all 0.8s;
 }
 #product .conatiner_right .msg_product ul > li:hover {
-  box-shadow: #ccc 2px 2px 20px;
+  box-shadow: #ccc  2px 2px 20px;
   top: -4px;
   -webkit-transform: scale(1.01);
       -ms-transform: scale(1.01);
@@ -180,75 +199,4 @@ body {
   font-size: 14px;
   color: #666;
   line-height: 32px;
-}
-.SuccessCase ol li {
-  position: relative;
-  overflow: hidden;
-  margin-top: 50px;
-}
-.SuccessCase ol li .case_img {
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  width: 400px;
-  height: 268px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  box-shadow: #999 5px 5px 20px;
-}
-.SuccessCase ol li .case_img > img {
-  position: absolute;
-  margin: auto auto;
-  max-width: 100%;
-  max-height: 100%;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-}
-.SuccessCase ol li .case_msg {
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  background: #fff;
-  width: 481px;
-  min-height: 288px;
-  margin-left: 340px;
-  padding-left: 90px;
-  padding-right: 40px;
-  border: 2px solid #d1e7fa;
-  margin-top: 40px;
-}
-.SuccessCase ol li .case_msg span {
-  font-size: 18px;
-  color: #28364a;
-  line-height: 40px;
-  padding-top: 20px;
-}
-.SuccessCase ol li .case_msg p {
-  font-size: 14px;
-  color: #666;
-  line-height: 32px;
-}
-.SuccessCase ol li:hover .case_img {
-  top: 50px;
-}
-.SuccessCase ol li:hover .case_msg {
-  margin-top: 0px;
-  margin-bottom: 50px;
-}
-.SuccessCase ol li:nth-last-child(2n+2):hover .case_msg {
-  margin-top: 50px;
-}
-.SuccessCase ol li:nth-last-child(2n+2):hover .case_img {
-  top: 0px;
-}
-.SuccessCase ol li:nth-last-child(2n+2) .case_msg {
-  margin: 0;
-  margin-bottom: 50px;
-  padding-left: 40px;
-  padding-right: 80px;
-}
-.SuccessCase ol li:nth-last-child(2n+2) .case_img {
-  top: 50px;
-  left: 420px;
 }
