--- a/src/less/index.less
+++ b/src/less/index.less
@@ -256,7 +256,7 @@ body{
                 transition: all 0.3s;
                 &:hover{
                     text-decoration:none;
-                    background: #43a047;
+                    background: #2b79bb;
                 }
                 &:focus{
                     text-decoration:none;
