--- a/src/css/user.css
+++ b/src/css/user.css
@@ -1,6 +1,23 @@
 body {
   background: #f9f9f9;
 }
+#lunbo_ssr {
+  position: relative;
+}
+#lunbo_ssr .p_text {
+  width: 1100px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 140px;
+  margin: auto auto;
+}
+#lunbo_ssr .p_text > p {
+  width: 610px;
+  float: right;
+  color: #fff;
+}
 .Label_ssr {
   width: 1200px;
   margin: 36px auto 40px;
@@ -28,175 +45,281 @@ body {
   font-family: arial;
   margin-bottom: 0;
 }
-#product {
-  width: 1200px;
+#msg_user {
+  width: 100%;
+}
+#msg_user .title_color > span {
+  padding-top: 83px;
+  line-height: 58px;
+  font-size: 16px;
+  color: #354255;
+  display: block;
+  text-align: center;
+}
+#msg_user .title_color > img {
+  display: block;
+  margin: 0 auto;
+}
+#msg_user .user_leader {
+  max-width: 1100px;
+  margin: 30px auto 0;
+}
+#msg_user .user_leader ol li {
+  margin-bottom: 50px;
+}
+#msg_user .user_leader ol li a {
+  display: block;
+  width: 100%;
+  height: 202px;
+  position: relative;
+  overflow: hidden;
+}
+#msg_user .user_leader ol li a .img_leader {
+  width: 200px;
+  height: 202px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 50%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+#msg_user .user_leader ol li a .img_leader > img {
+  width: 100%;
+  height: 202px;
+}
+#msg_user .user_leader ol li a > span {
+  color: #28364a;
+  font-size: 16px;
+  line-height: 45px;
+  margin-left: 220px;
+  width: 280px;
+  overflow: hidden;
+  padding-top: 25px;
+}
+#msg_user .user_leader ol li a > p {
+  width: 280px;
+  margin-left: 220px;
+  color: #666;
+  font-size: 14px;
+  line-height: 30px;
+}
+#msg_user .user_leader ol li a > p:hover {
+  text-decoration: none;
+}
+#msg_user .title_text {
+  display: block;
+  background: #eee;
+}
+#msg_user .title_text .user_culture {
+  max-width: 1100px;
+  margin: 30px auto 0;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+#msg_user .title_text .user_culture ul li:hover .img_l {
+  cursor: pointer;
+  opacity: 0.8;
+  -webkit-transform: scale(1.05);
+      -ms-transform: scale(1.05);
+          transform: scale(1.05);
+}
+#msg_user .title_text .user_culture ul li:hover > span {
+  opacity: 0.8;
+}
+#msg_user .title_text .user_culture ul li:hover > p {
+  opacity: 0.8;
+}
+#msg_user .title_text .user_culture ul li .img_l {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  width: 200px;
+  height: 202px;
+  background: #fff;
   margin: 0 auto;
   overflow: hidden;
+  border-radius: 50%;
 }
-#product .nav_left {
-  width: 320px;
-  float: left;
-  background: #ccc;
-  border: 1px solid #d1e7fa;
-  box-sizing: border-box;
-}
-#product .nav_left .sc_180 {
-  -webkit-transform: rotate(90deg);
-      -ms-transform: rotate(90deg);
-          transform: rotate(90deg);
-  top: -16px;
-}
-#product .nav_left .dd_active {
-  background: #28364a;
-}
-#product .nav_left .dd_active > b {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 58px;
-  width: 3px;
-  background: #548dda;
-}
-#product .nav_left .dd_active a {
-  color: #fff;
-  border: none;
-}
-#product .nav_left dl {
-  cursor: pointer;
-  margin-bottom: 0px;
-}
-#product .nav_left dl dt {
-  background: #fff;
-  font-size: 20px;
-  color: #28364a;
-  overflow: hidden;
-  text-indent: 30px;
-  font-weight: 500;
-}
-#product .nav_left dl dt:hover {
-  color: #548dda;
-}
-#product .nav_left dl dt > i {
-  line-height: 58px;
-  font-weight: 600;
-  position: absolute;
-  right: 30px;
-  top: 0;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-#product .nav_left dl dd,
-#product .nav_left dl dt {
-  line-height: 58px;
-  height: 58px;
-  position: relative;
-}
-#product .nav_left dl dd > a,
-#product .nav_left dl dt > a {
-  margin: 0 30px;
-  display: block;
-  border-bottom: 1px solid #ddd;
-  height: 57px;
-  color: #548dda;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-#product .nav_left dl dd {
-  background: #f9f9f9;
-  font-size: 14px;
-  color: #548dda;
-}
-#product .nav_left dl dd:hover > a {
-  text-indent: 10px;
-}
-#product .nav_left dl dd:last-of-type a {
-  border: none;
-}
-#product .conatiner_right {
-  width: 820px;
-  float: right;
-}
-#product .conatiner_right .title_text span {
-  font-size: 20px;
-}
-#product .conatiner_right .title_text p {
-  line-height: 30px;
-  font-size: 14px;
-  margin-bottom: 0;
-}
-#product .conatiner_right .title_text > img {
-  display: block;
-  margin: 12px auto 0;
-}
-#product .conatiner_right .msg_product .text_main span {
-  font-size: 18px;
-  color: #28364a;
-  line-height: 40px;
-  margin-top: 10px;
-  display: block;
-  padding: 10px 0 0 10px;
-}
-#product .conatiner_right .msg_product .text_main p {
-  font-size: 14px;
-  color: #666;
-  line-height: 32px;
-  padding: 0 10px;
-}
-#product .conatiner_right .msg_product .first_img {
+#msg_user .title_text .user_culture ul li .img_l img {
   width: 100%;
+}
+#msg_user .title_text .user_culture ul li > span {
+  width: 200px;
+  overflow: hidden;
+  line-height: 60px;
   display: block;
-  margin-bottom: 10px;
-}
-#product .conatiner_right .msg_product > h1 {
-  margin: 10px auto 0;
-  font-size: 20px;
-  line-height: 46px;
   text-align: center;
-  color: #28364a;
+  color: #548dda;
+  font-size: 20px;
+  margin: 0 auto;
 }
-#product .conatiner_right .msg_product ul > li {
+#msg_user .title_text .user_culture ul li > p {
+  line-height: 26px;
+  color: #548dda;
+  font-size: 14px;
+  width: 200px;
+  margin: 0 auto;
+  min-height: 180px;
+  overflow: hidden;
+}
+#msg_user .recruit {
+  padding-bottom: 20px;
+}
+#msg_user .recruit ol {
+  max-width: 1100px;
+  margin: 10px auto 0;
+}
+#msg_user .recruit ol li {
+  height: 556px;
+  overflow: hidden;
   position: relative;
-  background: #fff;
-  min-height: 200px;
-  -webkit-transition: all 0.8s;
-  transition: all 0.8s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
-#product .conatiner_right .msg_product ul > li:hover {
-  box-shadow: #ccc  2px 2px 20px;
-  top: -4px;
-  -webkit-transform: scale(1.01);
-      -ms-transform: scale(1.01);
-          transform: scale(1.01);
-}
-#product .conatiner_right .msg_product ul > li .img_pr {
-  width: 300px;
-  height: 200px;
+#msg_user .recruit ol li:after {
   position: absolute;
-  left: 0;
-  top: 0;
+  content: "";
+  height: 300px;
+  width: 2px;
+  background: #ddd;
+  right: 8px;
+  top: 128px;
 }
-#product .conatiner_right .msg_product ul > li .img_pr > img {
-  max-height: 100%;
-  max-width: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto auto;
+#msg_user .recruit ol li:last-of-type:after {
+  background: none;
 }
-#product .conatiner_right .msg_product ul > li .text_details {
-  width: 520px;
-  margin-left: 310px;
+#msg_user .recruit ol li:hover {
+  position: relative;
+  top: -20px;
 }
-#product .conatiner_right .msg_product ul > li .text_details span {
-  font-size: 18px;
-  color: #28364a;
-  line-height: 40px;
-  margin-top: 10px;
+#msg_user .recruit ol li span {
+  display: block;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 50px;
 }
-#product .conatiner_right .msg_product ul > li .text_details p {
+#msg_user .recruit ol li p {
   font-size: 14px;
   color: #666;
   line-height: 32px;
+}
+#msg_user .ssr_userInfo {
+  background: rgba(0, 0, 0, 0.5);
+  line-height: 50px;
+}
+#msg_user .ssr_userInfo ul {
+  width: 1100px;
+  margin: 0 auto;
+  color: #fff;
+}
+#msg_user .ssr_userInfo ul li span {
+  padding-right: 40px;
+}
+#msg_user .ssr_userInfo ul li b {
+  font-size: 20px;
+  padding-right: 30px;
+}
+#msg_user #map_iframe {
+  height: 400px;
+  position: relative;
+}
+#show {
+  position: relative;
+  height: 500px;
+  width: 960px;
+  margin: 0 auto;
+}
+#show a {
+  float: left;
+  display: inline;
+  height: 500px;
+}
+#show .img {
+  position: absolute;
+  width: 960px;
+  height: 500px;
+  overflow: hidden;
+}
+#show .img SPAN {
+  position: absolute;
+  width: 19999px;
+  display: block;
+}
+#show .btns {
+  z-index: 10;
+  position: absolute;
+  width: 960px;
+}
+#show .btns B {
+  position: absolute;
+  width: 100px;
+  display: block;
+  height: 14px;
+  overflow: hidden;
+  top: 480px;
+  left: 50%;
+}
+#show .btns B I {
+  width: 10px;
+  background: #414140;
+  float: left;
+  height: 10px;
+  font-size: 0px;
+  overflow: hidden;
+  cursor: pointer;
+  margin-right: 6px;
+  border: #414140 2px solid;
+  border-radius: 7px;
+}
+#show .btns B I:hover {
+  background: #a7a7a6;
+}
+#show .btns B I.on {
+  background: #3cd2f1;
+  cursor: default;
+}
+#show .btns B I.on:hover {
+  background: #3cd2f1;
+  cursor: default;
+}
+#show .btns S {
+  position: absolute;
+  WIDTH: 60px;
+  display: none;
+  height: 80px;
+  overflow: hidden;
+  top: 212px;
+  cursor: pointer;
+}
+#show .btns S I {
+  position: absolute;
+  width: 60px;
+  background: url(../img/user/btn_show.png);
+  height: 160px;
+  _filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled=true, sizingMethod=scale, src="../images/btn_show.png");
+  _background: none;
+}
+#show .btns S.prev {
+  left: 0px;
+  opacity: 1;
+}
+#show .btns S.prev I {
+  top: -80px;
+}
+#show .btns S.next {
+  right: 0px;
+}
+.show-hover#show .btns S {
+  display: block;
+}
+.masks {
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+  -moz-opacity: 0.5;
+  -khtml-opacity: 0.5;
+  height: 500px;
+  position: absolute;
+  background: #000;
+  overflow: hidden;
 }
